--- a/info.plist
+++ b/info.plist
@@ -38,6 +38,7 @@
 			<string>------------------------------------</string>
 			<string>64180C76-8C8D-4F29-82BE-6096BE1B14D8</string>
 			<string>3556C0BE-73B3-45CE-8C9C-7B3AA3BB038B</string>
+			<string>36EC03E9-EFF4-479A-AB90-8DFA16800643</string>
 		</array>
 		<key>submenus</key>
 		<dict>
